libsnapwebsites (1.1.32.0~xenial) xenial; urgency=high

  * SNAP-491: Changed Ctrl-C in the equivalent of a STOP.
  * Hide message about calculate_next_tick() when not required.
  * Fixed the stop() function so it removes the messenger if not connected.
  * Added a counter so the snapbackend without --action stops after 3 errors.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 20 Oct 2016 11:17:49 -0700

libsnapwebsites (1.1.31.0~xenial) xenial; urgency=high

  * SNAP-461: Hide STATUS messages that we ignore.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 19 Oct 2016 11:28:18 -0700

libsnapwebsites (1.1.30.0~xenial) xenial; urgency=high

  * SNAP-443: Fixed the return value when BIO_eof() is true and a read "failed".

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 18 Oct 2016 21:02:47 -0700

libsnapwebsites (1.1.29.0~xenial) xenial; urgency=high

  * SNAP-266: Commenting out the connect_messenger() in snap_child. At the
    moment that makes the whole thing crash like crazy.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 18 Oct 2016 18:33:47 -0700

libsnapwebsites (1.1.28.0~xenial) xenial; urgency=high

  * SNAP-266: Check whether there is a messenger before getting an instance.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 18 Oct 2016 11:00:47 -0700

libsnapwebsites (1.1.27.0~xenial) xenial; urgency=high

  * SNAP-461: Added support to retrieve the status of the snaplock service.
  * Prevent showing a website if snaplock is not running.
  * Prevent running a backend if snaplock is not running.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 14 Oct 2016 17:19:45 -0700

libsnapwebsites (1.1.26.0~xenial) xenial; urgency=high

  * SNAP-266: Added f_func at the end of the log() calls.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 12 Oct 2016 23:06:53 -0700

libsnapwebsites (1.1.25.0~xenial) xenial; urgency=high

  * SNAP-266: Fixed a test in the logger that was inverted.
  * SNAP-465: Added an entry about the /server-status, commented out by default.
